--- a/pom.xml
+++ b/pom.xml
@@ -187,18 +187,18 @@
     <repositories>
       <repository>
         <id>maven-group</id>
-        <url>http://localhost:8081/repository/maven-public/</url>
+        <url>http://192.168.77.11:8081/repository/maven-public/</url>
       </repository>
     </repositories>
 
     <distributionManagement>
      <snapshotRepository>
        <id>maven-snapshots</id>
-       <url>http://localhost:8081/repository/maven-snapshots/</url>
+       <url>http://192.168.77.11:8081/repository/maven-snapshots/</url>
      </snapshotRepository>
      <repository>
        <id>maven-releases</id>
-       <url>http://localhost:8081/repository/maven-releases/</url>
+       <url>http://192.168.77.11:8081/repository/maven-releases/</url>
      </repository>
     </distributionManagement>
 
